--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -2,7 +2,7 @@
 
 <ion-content class="ion-padding">
 
-    <ion-button (click)="onClick()" expand="block">
+    <ion-button (click)="presentActionSheet()" expand="block">
         Mostrar Action Sheet
     </ion-button>
 
