--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -234,3 +234,8 @@
     --ion-card-background: #1e1e1e;
   }
 }
+
+.action-sheet-button.rojo,
+.action-sheet-button.rojo .action-sheet-icon{
+  color: red;
+}
