--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,6 +1,18 @@
 
 <app-header title="alert" ></app-header>
 
-<ion-content>
-  <p>Estoy en Alert</p>
+<ion-content class="ion-padding" >
+  <ion-button (click)="presentAlert()" expand="block">
+    Alert
+  </ion-button>
+  <ion-button (click)="presentAlertMultipleButtons()" expand="block">
+    Multiple Buttons
+  </ion-button>
+  <ion-button (click)="presentAlertPrompt()" expand="block">
+    Alert Prompt
+  </ion-button>
+  <ion-button (click)="presentAlertRadio()" expand="block">
+    Alert Radio
+  </ion-button>
+
 </ion-content>
