--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,13 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.action-sheet-button.rojo,
+.action-sheet-button.rojo .action-sheet-icon{
+  color: red;
+}
+
+.rojo{
+  color: red !important;
+}
