--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,6 @@
         color="primary"
         mode="ios"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-capitalize">{{ title }}</ion-title>
+    <ion-title class="ion-text-capitalize" color="primary">{{ title }}</ion-title>
   </ion-toolbar>
 </ion-header>
