--- a/src/app/pages/grid/grid.page.html
+++ b/src/app/pages/grid/grid.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header translucent>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button 
@@ -18,7 +18,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen>
   <ion-grid fixed> <!-- fixed: Centra el contenido en pantallas más grandes con si tubiera un "container" y no permite que el contenido se estire -->
     <ion-row>
 
