--- a/src/global.scss
+++ b/src/global.scss
@@ -34,3 +34,14 @@
 .rojo{
   color: red !important;
 }
+
+
+// Estilos a componentes de Android
+.md ion-item{
+  // --background: red;
+}
+
+// Estilos a componentes de IOS
+.ios ion-item{
+  // --background: green;
+}
