--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,44 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+
+  <ion-menu side="start" menuId="first" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Menu</ion-title>
+
+        <ion-buttons slot="end">
+          <ion-button (click)="menuClosed()">
+            <ion-icon slot="icon-only" name="close"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <!-- Opcion 1: se cierra utilizando un metodo -->
+        <!-- <ion-item *ngFor="let componente of componentes | async"
+                  [routerLink] = 'componente.redirectTo'
+                  (click)="menuClosed()"
+                  detail="true">
+          <ion-icon [name]="componente.icon" slot="start" color="primary"></ion-icon>
+          <ion-label>{{ componente.name }}</ion-label>
+        </ion-item> -->
+
+        <!-- Opcion 2: Se cierra utilizando envolviendo el ion-item en un ion-menu-toggle  -->
+        <ion-menu-toggle *ngFor="let componente of componentes | async">
+          
+          <ion-item [routerLink] = 'componente.redirectTo'
+                detail="true">
+            <ion-icon [name]="componente.icon" slot="start" color="primary"></ion-icon>
+            <ion-label>{{ componente.name }}</ion-label>
+          </ion-item>
+
+        </ion-menu-toggle>
+
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  
+
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
