--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,12 +1,23 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-title>Componentes</ion-title>
+
+    <!-- <ion-buttons slot="start">
+      <ion-button color="primary" (click)="toggleMenu()">
+        <ion-icon slot="icon-only" name="menu-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons> -->
+
+    <ion-buttons slot="start">
+      <ion-menu-button menu="first" color="primary"></ion-menu-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="main-content">
   <ion-list>
-    <ion-item *ngFor="let componente of componentes"
+    <ion-item *ngFor="let componente of componentes | async"
               [routerLink] = 'componente.redirectTo'
               detail="true"
               detail-icon="caret-forward">
